# resskills

./: .gitignore  ARCHITECTURE.md  README.md  SKILL.md  SKILL.md.tmpl  config.example.yaml  config.yaml  pyproject.toml  settings.local.json  setup.sh
analyze/: SKILL.md  SKILL.md.tmpl
blocks/: completion-protocol.md  learnings-epilogue.md  preamble.md  python-standards.md  review-rubric.md  routing-rules.md  venue-formats.md  voice.md  writing-quality-check.md
careful/: SKILL.md  SKILL.md.tmpl
checkpoint/: SKILL.md  SKILL.md.tmpl
code-quality/: SKILL.md  SKILL.md.tmpl
debug/: SKILL.md  SKILL.md.tmpl
deep-research/: SKILL.md  SKILL.md.tmpl
experiment/: SKILL.md  SKILL.md.tmpl
hypothesis/: SKILL.md  SKILL.md.tmpl
implement/: SKILL.md  SKILL.md.tmpl
integrate/: SKILL.md  SKILL.md.tmpl
learn/: SKILL.md  SKILL.md.tmpl
lit-review/: SKILL.md  SKILL.md.tmpl
paper-compile/: SKILL.md  SKILL.md.tmpl
paper-review/: SKILL.md  SKILL.md.tmpl
paper-write/: SKILL.md  SKILL.md.tmpl
pi-review/: SKILL.md  SKILL.md.tmpl
resskills/scripts/: config.py  gen_skills.py
retro/: SKILL.md  SKILL.md.tmpl
review/: SKILL.md  SKILL.md.tmpl
scripts/: config.py  gen_skills.py
second-opinion/: SKILL.md  SKILL.md.tmpl
setup-project/: SKILL.md  SKILL.md.tmpl
templates/: experiment-plan.md  findings.md  literature-note.md  paper-outline.md  research-state.yaml
