[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resskills"
version = "0.1.0"
description = "Virtual AI research team for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
resskills-gen = "resskills.scripts.gen_skills:main"
resskills-config = "resskills.scripts.config:main"

[dependency-groups]
dev = ["ruff>=0.9.0", "mypy>=1.10"]

[tool.hatch.build.targets.wheel]
packages = ["resskills"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["resskills"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
